Changes for Logicoin

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,5 @@
---------------limecoinj
-HashEngineering <hashengineeringsolutions@gmail.com>
-
---------------digitalcoinj
-HashEngineering <hashengineeringsolutions@gmail.com>
+--------------logicoinj
+Logicoin <admin@logicoin.info>
 
 --------------bitcoinj
 Mike Hearn <mike@plan99.net>
